--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,10 +7,25 @@
 .logo{
     width: 150px; 
 }
+.link{
+    color:#018C77!important;
+    margin-right: 5px; 
+}
+
+.link-active, .link:hover{
+/*    background-color: #f5f5f5;*/
+    color:#c6e301!important;
+}
+.nlinks{
+    
+}
+.nlinks:hover{
+    color:#c6e301;
+}
 
 .car-img{
     width: 100%;
-    height:580px;
+    height:630px;
 }
 .mmt{
     margin-top: 30px;
@@ -34,6 +49,28 @@
     height: 150px;
     margin-top: 10px;
 }
+
+.secolor{
+    background-color: #ccfff7;
+    color:#008B75;
+    border-radius: 400px; 
+    padding: 14px 8px 14px 12px; 
+    font-size: 1.2em;
+    margin: 10px;
+}
+.gcolor{
+    background-image: linear-gradient(to right,#7b1111,#ff450d)
+}
+
+/*/////////////////////*/
+.banner{
+    height: 200px;
+    width: 100%;
+    background-image: linear-gradient(to left,#86B84A, #A3C10E);
+}
+
+/*END GENERAL*/
+
 /*send message*/
 .messenger{
     background-color: #F4F4F4;
@@ -127,6 +164,8 @@
     margin-left: 10px;
 }
 /*end footer*/
+
+
 
 
 /*MEDIA QUERIES*/
