--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,6 +124,25 @@
 /*End BLogs*/
 
 
+/* End Category page css*/
+
+/*Gallery page*/
+.display{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.gallery{
+    width: 370px;
+    height: 400px;
+    padding: 0; 
+}
+.gallery img{
+    width: 100%;
+    height: 100%; 
+}
+/*End Gallery page*/
+
 
 
 
@@ -170,12 +189,18 @@
 
 /*MEDIA QUERIES*/
 
-
-@media only screen and (max-width:1536px){
+/* Large screens ----------- */
+@media only screen
+and (min-width : 1824px) {
     .car-img{ 
         height:740px; 
+    }
 }
+
+/*
+@media only screen and (max-width:1536px){
 }
+*/
 
 @media only screen and (max-width:700px){
     .car-img{ 
