--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,12 +99,12 @@
     background-size: contain;
 }
 .c-image{
-    background-image: url(/static/images/covers/reseach%20banner.png);
+    background-image: url(/static/images/covers/Consulting%20banner.png);
     background-position: center;
     background-size: contain;
 }
 .k-image{
-    background-image: url(/static/images/covers/reseach%20banner.png);
+    background-image: url(/static/images/covers/KH&C.png);
     background-position: center;
     background-size: contain;
 }
