--- a/static/css/style.css
+++ b/static/css/style.css
@@ -94,7 +94,7 @@
     background-size: contain;
 }
 .q-image{
-    background-image: url(/static/images/covers/reseach%20banner.png);
+    background-image: url(/static/images/covers/Quality%20Control.png);
     background-position: center;
     background-size: contain;
 }
